# blog_template

./: .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
posts/: hello-world.md  private-note.md
scripts/: add-user.py  add_user.py  lib.py  make-example.py  make_example.py  posts.py  publish.py  revoke-user.py  revoke_user.py  static.py
src/: arch.html.j2  index.html  index.html.j2  login.html.j2  style.css
src/js/: auth.js  crypto.js  decrypt.js  index.js  logout.js
src/login/: index.html  login.js
src/logout/: index.html  index.html.j2  logout.js
src/post/: index.html  index.html.j2
src/unauthorized/: index.html  index.html.j2  style.css
src/user/: index.html.j2
