[project]
name = "static-encrypted-blog"
version = "0.1.0"
description = "A fully static encrypted blog generator"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
    "jinja2>=3.0",
    "mistune>=3.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
publish = "scripts.publish:main"
add-user = "scripts.add_user:cli"
revoke-user = "scripts.revoke_user:cli"
make_example = "scripts.make_example:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
